2010-12-06  David Blacka  <davidb@verisignlabs.com>

	* jdnssec-verifyzone: Complete refactored the verification code to
	more comprehensively check a zone for DNSSEC validity.  Instead of
	just verifying signatures, it will also check to see if the NSEC
	or NSEC3 chains are valid.

2010-12-05  David Blacka  <davidb@verisignlabs.com>

	* jdnssec-signzone: Fix a bug that would incorrectly handle
	delgations below delegations (those should be ignored.)

	* jdnssec-signzone: Make the signer ignore junk below a DNAME.
	This differs from BIND's dnssec-signzone behavior (currently), but
	is the correct behavior, as stuff below a DNAME doesn't actually
	exist in DNS.  Note that if a name in a zone has both a DNAME and
	a NS RRset (and is not at the apex), then the behavior is a bit
	undefined.

	* jdnssec-signzone: Fix a bug that would incorrectly set the RRSIG
	bit for NSEC3 RRs corresponding to insecure delegations.

	* jdnssec-signzone: add a "verbose signing" option.  This will
	cause the pre-signed bytes and the raw signature bytes to be
	output when signing.
	* Other fixes: some minor tweaks and comment fixes.
	Unfortunately, also a lot of rewrapping and whitespace changes due
	to Eclipse.  Sigh.

2010-01-14  David Blacka  <davidb@verisignlabs.com>

	* Released version 0.9.6

2010-01-09  David Blacka  <davidb@verisignlabs.com>

	* Upgrade to DNSJava 2.0.8 (plus a few local changes).  2.0.8
	fixes a major bug in typemap wire conversion.

2009-11-02  David Blacka  <davidb@verisignlabs.com>

	* Released version 0.9.5

2009-11-01  David Blacka  <davidb@verisignlabs.com>

	* Upgrade to DNSJava 2.0.7 (plus a few local changes).
	* DnsKeyAlogorithm: change the RSASHA512 number to 10.

2009-08-23  David Blacka  <davidb@verisignlabs.com>

	* Released version 0.9.4

2009-07-15  David Blacka  <davidb@verisignlabs.com>

	* SignUtils: Fix major issue where the code that generates that
	canonical RRset given signature data wasn't obeying the "Orig TTL"